fixed page navigation nav width issue on both light and dark mode

--- a/public/tenant-resources/css/dark-fixes.css
+++ b/public/tenant-resources/css/dark-fixes.css
@@ -1802,3 +1802,7 @@ select.form-control{
 .bg-light{
     background-color: #343d55 !important;
 }
+
+nav[aria-label="Page Navigation"]{
+    overflow: auto;
+}
